--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -10,12 +10,11 @@ body {
 .josefin-sons {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
     font-style: normal;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 2px 2px 4px red;
     border-bottom: solid 3px rgb(115, 115, 114);
